update: README and website content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             A Software <br /><span class="multi-text-effect">Developer</span>
                         </h2>
                         <p>
-                            Passionate about software engineering and solving real-world problems.
+                            Passionate about software development and solving real-world problems.
                         </p>
                         <div class="contact-me-button-container">
                             <a href="#contact">
@@ -93,15 +93,13 @@
                         <h1 class="section-title">About Me</h1>
                         <hr />
                         <p>
-                            I am a third-year Computer Science student at Ontario Tech University,
-                            passionate about software engineering and solving real-world problems.
-                            Through professional experience, academic coursework, and personal
-                            projects, I have built a strong foundation in software development,
-                            quality assurance, and problem-solving.
+                            I'm a Software Developer and third-year Computer Science student at
+                            Ontario Tech University with experience in software development, quality
+                            assurance, and project management.
                             <br /><br />
-                            I am eager to leverage my technical and communication skills to develop
-                            software solutions that drive innovation, business growth, and
-                            sustainability.
+                            I'm motivated to develop software solutions that solve real-world
+                            problems and aim to leverage my technical and communication skills to
+                            drive innovation, business growth, and sustainability.
                         </p>
                         <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
                             <button class="button-primary">
@@ -208,7 +206,7 @@
                         <div class="project-details-container">
                             <h3 class="project-title">Compute Store: E-commerce Store Simulator</h3>
                             <p>
-                                E-commerce simulator for browsing and purchasing the latest tech
+                                E-commerce store simulator for browsing and purchasing tech
                                 products.
                             </p>
                             <hr />
@@ -297,7 +295,7 @@
                         <div class="project-details-container">
                             <h3 class="project-title">Tech Industry Billionaires Data Analysis</h3>
                             <p>
-                                Data analysis of tech industry billionaires to uncover sector
+                                Data analysis of tech industry billionaires to extract sector
                                 insights and forecast industry trends.
                             </p>
                             <hr />
